--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -1,9 +1,140 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PlayActivity">
+    android:background="#4a4a4a">
 
-</android.support.constraint.ConstraintLayout>
+<!-- Player Header -->
+
+    <LinearLayout
+    android:id="@+id/player_header_bg"
+    android:layout_width="fill_parent"
+    android:layout_height="60dip"
+    android:background="@layout/bg_player_header"
+    android:layout_alignParentTop="true"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp">
+
+    <!-- Lesson Title -->
+        <TextView
+            android:id="@+id/lessonTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_weight="1"
+            android:paddingLeft="10dp"
+            android:text="Lesson Title"
+            android:textColor="#04b3d2"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <!-- lesson Thumbnail Image -->
+    <LinearLayout
+        android:id="@+id/lessonThumbnail"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:gravity="center"
+        android:layout_below="@id/player_header_bg">
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="test"
+            android:src="@drawable/adele"/>
+    </LinearLayout>
+
+    <!-- Player Footer -->
+<LinearLayout
+android:id="@+id/player_footer_bg"
+android:layout_width="fill_parent"
+android:layout_height="100dp"
+android:layout_alignParentBottom="true"
+android:background="@layout/bg_player_footer"
+android:gravity="center">
+
+<!-- Player Buttons -->
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:gravity="center_vertical"
+    android:background="@layout/rounded_corner"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp">
+
+    <!-- Backward Button -->
+    <ImageButton
+        android:id="@+id/btnBackward"
+        android:src="@drawable/btn_backward"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"/>
+
+    <!-- Play Button -->
+    <ImageButton
+        android:id="@+id/btnPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:contentDescription="btnPlay"
+        android:src="@drawable/btn_play" />
+
+    <!-- Forward Button -->
+    <ImageButton
+        android:id="@+id/btnForward"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@null"
+        android:contentDescription="btnForward"
+        android:src="@drawable/btn_forward" />
+</LinearLayout>
+</LinearLayout>
+
+    <!-- Progress Bar/Seek bar -->
+<SeekBar
+android:id="@+id/lessonProgressBar"
+android:layout_width="fill_parent"
+android:layout_height="wrap_content"
+android:layout_marginRight="20dp"
+android:layout_marginLeft="20dp"
+android:layout_marginBottom="20dp"
+android:layout_above="@id/player_footer_bg"
+android:thumb="@drawable/seek_handler"
+android:progressDrawable="@drawable/seekbar_progress"
+android:paddingLeft="6dp"
+android:paddingRight="6dp"/>
+
+    <!-- Timer Display -->
+<LinearLayout
+android:id="@+id/timerDisplay"
+android:layout_above="@id/lessonProgressBar"
+android:layout_width="fill_parent"
+android:layout_height="wrap_content"
+android:layout_marginRight="20dp"
+android:layout_marginLeft="20dp"
+android:layout_marginBottom="10dp">
+<!-- Current Duration Label -->
+<TextView
+    android:id="@+id/lessonCurrentDurationLabel"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:gravity="left"
+    android:textColor="#eeeeee"
+    android:textStyle="bold"/>
+<!-- Total Duration Label -->
+<TextView
+    android:id="@+id/lessonTotalDurationLabel"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:gravity="right"
+    android:textColor="#04cbde"
+    android:textStyle="bold"/>
+</LinearLayout>
+
+    </RelativeLayout>
