Первичный тестовый просмотр текста
Signed-off-by: mcculov <alexeynm@bk.ru>

--- a/app/src/main/res/drawable-hdpi/seekbar_progress_bg.xml
+++ b/app/src/main/res/drawable-hdpi/seekbar_progress_bg.xml
@@ -8,8 +8,7 @@
             android:antialias="true"
             android:dither="false"
             android:filter="false"
-            android:gravity="left"
-        />
+            android:gravity="left"/>
         </clip>
     </item>
 </layer-list>
