--- a/app/src/main/res/layout/activity_play.xml
+++ b/app/src/main/res/layout/activity_play.xml
@@ -1,28 +1,67 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#4a4a4a">
 
-<!-- Player Header -->
+    <ListView
+        android:id="@+id/lessonText"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintBottom_toTopOf="@+id/timerDisplay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/player_header_bg"
+        android:divider="#242424"
+        android:dividerHeight="1dp"
+        android:headerDividersEnabled="false"
+        android:listSelector="@drawable/list_selector"
+        tools:layout_editor_absoluteX="8dp"
+        tools:layout_editor_absoluteY="52dp" />
+
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
+        android:layout_marginBottom="32dp"
+        android:layout_marginEnd="32dp"
+        android:layout_marginLeft="32dp"
+        android:layout_marginRight="32dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="32dp"
+        android:src="@drawable/head"
+        app:layout_constraintBottom_toTopOf="@+id/timerDisplay"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/player_header_bg"
+        app:srcCompat="@drawable/head" />
 
     <LinearLayout
-    android:id="@+id/player_header_bg"
-    android:layout_width="fill_parent"
-    android:layout_height="60dip"
-    android:background="@layout/bg_player_header"
-    android:layout_alignParentTop="true"
-    android:paddingLeft="5dp"
-    android:paddingRight="5dp">
+        android:id="@+id/player_header_bg"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:background="@layout/bg_player_header"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp">
 
-    <!-- Lesson Title -->
+        <!-- Lesson Title -->
         <TextView
             android:id="@+id/lessonTitle"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
             android:layout_weight="1"
+            android:paddingBottom="10dp"
             android:paddingLeft="10dp"
             android:text="Lesson Title"
             android:textColor="#04b3d2"
@@ -30,111 +69,113 @@
             android:textStyle="bold" />
     </LinearLayout>
 
-    <!-- lesson Thumbnail Image -->
     <LinearLayout
-        android:id="@+id/lessonThumbnail"
+        android:id="@+id/timerDisplay"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:gravity="center"
-        android:layout_below="@id/player_header_bg">
-
-        <ImageView
-            android:layout_width="wrap_content"
+        android:layout_above="@id/lessonProgressBar"
+        android:layout_marginBottom="10dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintBottom_toTopOf="@+id/lessonProgressBar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent">
+        <!-- Current Duration Label -->
+        <TextView
+            android:id="@+id/lessonCurrentDurationLabel"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:contentDescription="test"
-            android:src="@drawable/adele"/>
+            android:layout_weight="1"
+            android:gravity="left"
+            android:textColor="#eeeeee"
+            android:textStyle="bold" />
+        <!-- Total Duration Label -->
+        <TextView
+            android:id="@+id/lessonTotalDurationLabel"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:textColor="#04cbde"
+            android:textStyle="bold" />
     </LinearLayout>
 
-    <!-- Player Footer -->
-<LinearLayout
-android:id="@+id/player_footer_bg"
-android:layout_width="fill_parent"
-android:layout_height="100dp"
-android:layout_alignParentBottom="true"
-android:background="@layout/bg_player_footer"
-android:gravity="center">
-
-<!-- Player Buttons -->
-<LinearLayout
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:gravity="center_vertical"
-    android:background="@layout/rounded_corner"
-    android:paddingLeft="10dp"
-    android:paddingRight="10dp">
-
-    <!-- Backward Button -->
-    <ImageButton
-        android:id="@+id/btnBackward"
-        android:src="@drawable/btn_backward"
-        android:layout_width="wrap_content"
+    <SeekBar
+        android:id="@+id/lessonProgressBar"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:background="@null"/>
+        android:layout_above="@id/linearLayout"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="20dp"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:progressDrawable="@drawable/seekbar_progress"
+        android:thumb="@drawable/seek_handler"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <!-- Play Button -->
-    <ImageButton
-        android:id="@+id/btnPlay"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:background="@null"
-        android:contentDescription="btnPlay"
-        android:src="@drawable/btn_play" />
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-    <!-- Forward Button -->
-    <ImageButton
-        android:id="@+id/btnForward"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        android:contentDescription="btnForward"
-        android:src="@drawable/btn_forward" />
-</LinearLayout>
-</LinearLayout>
+        <LinearLayout
+            android:id="@+id/player_footer_bg"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentBottom="true"
+            android:background="@layout/bg_player_footer"
+            android:gravity="center">
 
-    <!-- Progress Bar/Seek bar -->
-<SeekBar
-android:id="@+id/lessonProgressBar"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:layout_marginRight="20dp"
-android:layout_marginLeft="20dp"
-android:layout_marginBottom="20dp"
-android:layout_above="@id/player_footer_bg"
-android:thumb="@drawable/seek_handler"
-android:progressDrawable="@drawable/seekbar_progress"
-android:paddingLeft="6dp"
-android:paddingRight="6dp"/>
+            <!-- Player Buttons -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@layout/rounded_corner"
+                android:gravity="center_vertical"
+                android:orientation="horizontal"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
 
-    <!-- Timer Display -->
-<LinearLayout
-android:id="@+id/timerDisplay"
-android:layout_above="@id/lessonProgressBar"
-android:layout_width="fill_parent"
-android:layout_height="wrap_content"
-android:layout_marginRight="20dp"
-android:layout_marginLeft="20dp"
-android:layout_marginBottom="10dp">
-<!-- Current Duration Label -->
-<TextView
-    android:id="@+id/lessonCurrentDurationLabel"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:gravity="left"
-    android:textColor="#eeeeee"
-    android:textStyle="bold"/>
-<!-- Total Duration Label -->
-<TextView
-    android:id="@+id/lessonTotalDurationLabel"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_weight="1"
-    android:gravity="right"
-    android:textColor="#04cbde"
-    android:textStyle="bold"/>
-</LinearLayout>
+                <!-- Backward Button -->
+                <ImageButton
+                    android:id="@+id/btnBackward"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:src="@drawable/btn_backward" />
 
-    </RelativeLayout>
+                <!-- Play Button -->
+                <ImageButton
+                    android:id="@+id/btnPlay"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:contentDescription="btnPlay"
+                    android:src="@drawable/btn_play" />
+
+                <!-- Forward Button -->
+                <ImageButton
+                    android:id="@+id/btnForward"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@null"
+                    android:contentDescription="btnForward"
+                    android:src="@drawable/btn_forward" />
+            </LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+
+</android.support.constraint.ConstraintLayout>
