--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="logo_size">20pt</dimen>
     <dimen name="version_size">8pt</dimen>
     <dimen name="version_spacing">5pt</dimen>
+    <dimen name="text_size">20pt</dimen>
 </resources>
